[package]
name = "h3keys3"
version = "1.0.0"
authors = ["Tomasz Stachowiak"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.3", features = ["winuser"] }
kernel32-sys = "0.2.1"
user32-sys = "0.1.2"

[target.'cfg(unix)'.dependencies]
uinput-sys={ version = "0.1.7" }
uinput={ version = "0.1.3", default-features = false }
evdev="0.10.1"

[dependencies.winrt]
version = "0.4.0"
features = ["windows-system", "windows-ui", "windows-data"]